--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,4 +1,4 @@
-    <nav id="navbar" class="navbar navbar-expand-md bg-darkest navbar-dark px-4 py-2 fixed-top smart-scroll">
+    <nav id="navbar" class="navbar navbar-expand-md navbar-dark px-4 py-2 fixed-top smart-scroll">
       <a class="navbar-brand" href="/">
         <img src="/svg/bayza-logo.svg" width="100">
       </a>
