--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -107,23 +107,23 @@
             <h4 class="my-3 font-weight-light">Panamanian music producer</h4>
             <small><p class="mb-4"><span>Contact: </span><a class="text-white" href="mailto:info@bayzamusic.com" target="_blank">info@bayzamusic.com</a></p></small>
           </div>
-          <div class="col-12 col-md-6 row mt-4 text-right px-0" data-aos="fade-left" data-aos-anchor="#example-anchor" data-aos-offset="500" data-aos-duration="1500">
-            <div class="col-12 col-md-8 d-none d-md-block mt-2 pr-0">
-              <h3>Latest Release:</h3>
-              <a target="_blank" class="text-white" href="/releases/{{ releases.last.year }}{{ releases.last.link }}/{{ releases.last.release }}">
+          <div class="col-12 col-md-6 row text-right px-0 align-items-center" data-aos="fade-left" data-aos-anchor="#example-anchor" data-aos-offset="500" data-aos-duration="1500">
+            <div class="col-12 col-md-7 d-none d-md-block pr-0 text-secondary">
+              <h5>Latest Release:</h5>
+              <a target="_self" class="latest-release-title text-white" href="/releases/{{ releases.last.year }}{{ releases.last.link }}/{{ releases.last.release }}" onmouseover="onhoverover('textDecoration')" onmouseout="onhoverout('textDecoration')">
                 <style>
                   .release-color:hover {
                     color: #fff!important;
                   }
                 </style>
-                <h5 class="font-weight-light">{{ releases.last.title }}<i class="ml-1 fas fa-external-link-alt"></i></h5>
+                <h3 class="font-weight-light">{{ releases.last.title }}</h3>
               </a>
               <div><h5 class="font-weight-light" >by {{ releases.last.artists }}</h5></div>
-              <small><p class="mb-4 mt-1">{{ releases.last.date | date: "%b %-d, %Y" }}</p></small>
+              <small><p class="mb-0 mt-1">{{ releases.last.date | date: "%b %-d, %Y" }}</p></small>
             </div>
-            <div class="col-12 col-md-4 d-none d-md-block portfolio-block block-intro mt-2">
-              <div class="avatar mt-1 mr-0 text-left px-1" style="border-radius:0px">
-                <img id="covers" class="" src="https://bayzamusic.com/images/releases/{{ releases.last.year }}/{{ releases.last.cover }}.jpg" alt="" width="120px" height="120px">
+            <div class="col-12 col-md-5 d-none d-md-block p-0" onmouseover="onhoverover('textDecoration')" onmouseout="onhoverout('textDecoration')" onclick="lnk('/releases/{{ releases.last.year }}{{ releases.last.link }}/{{ releases.last.release }}')">
+              <div class="mr-0 text-left px-2">
+                <img id="covers" class="mx-auto d-flex w-100" src="https://bayzamusic.com/images/releases/{{ releases.last.year }}/{{ releases.last.cover }}.jpg" alt="" style="max-width:230px;">
               </div>
             </div>
           </div>
@@ -337,6 +337,16 @@
         console.log(birth);
         document.getElementById('age').innerHTML = age;
       }); 
+
+    function onhoverover(textDecoration) {
+      document.getElementsByClassName('latest-release-title')[0].style.textDecoration = "underline";
+    }
+    function onhoverout(textDecoration) {
+      document.getElementsByClassName('latest-release-title')[0].style.textDecoration = "none";
+    }
+    function lnk(url) {
+	    window.open(url, '_self');
+    }
     </script>
   </body>
 </html>
