--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -55,8 +55,8 @@
               </li>
             </ul>
           </div>
-          <div class="col-md-12 text-center mt-2 text-small">
-            <p>© Bayza. All rights reserved.</p>
+          <div class="col-md-12 text-center mt-4 text-small">
+            <p class="mb-0">© Bayza. All rights reserved.</p>
           </div>
         </div>
       </div>
