--- a/_includes/resources.html
+++ b/_includes/resources.html
@@ -1,6 +1,6 @@
     <link rel="icon" href="/images/bayza-logo-black.png"/>
     <link rel="shortcut icon" href="/images/bayza-logo-black.png"/>
-    <link rel="preload" href="fonts/CircularStd-Book.woff" as="font" type="font/woff" crossorigin>
+    <link rel="preload" href="/fonts/CircularStd-Book.woff" as="font" type="font/woff" crossorigin>
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="/css/fontello-embedded.css">
