--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -123,7 +123,7 @@
             </div>
             <div class="col-12 col-md-5 d-none d-md-block p-0" onmouseover="onhoverover('textDecoration')" onmouseout="onhoverout('textDecoration')" onclick="lnk('/releases/{{ releases.last.year }}{{ releases.last.link }}/{{ releases.last.release }}')">
               <div class="mr-0 text-left px-2">
-                <img id="covers" class="mx-auto d-flex w-100" src="https://bayzamusic.com/images/releases/{{ releases.last.year }}/{{ releases.last.cover }}.jpg" alt="" style="max-width:230px;">
+                <img id="covers" class="mx-auto d-flex w-100" src="/images/releases/{{ releases.last.year }}/{{ releases.last.cover }}.jpg" alt="" style="max-width:230px;">
               </div>
             </div>
           </div>
@@ -139,7 +139,7 @@
             <div class="item">
               <div class="cover">
                 <div class="upcoming-container">
-                  <img class="img-fluid scale-on-hover upcoming" src="https://bayzamusic.com/images/releases/2022/lunchbox-friends.jpg">
+                  <img class="img-fluid scale-on-hover upcoming" src="/images/releases/2022/lunchbox-friends.jpg">
                   <div class="centered">
                     <h4>Upcoming</h4>
                     <small><h5>Dec 9, 2022</h5></small>
@@ -156,7 +156,7 @@
               <div class="cover">
                 <a href="/releases/{{ item.year }}{{ item.link }}/{{ item.release }}">
                   <div class="overflow-hidden">
-                    <img id="covers" class="img-fx img-fluid release-color-covers scale-on-hover" src="https://bayzamusic.com/images/releases/{{ item.year }}/{{ item.cover }}.jpg" alt="{{ item.artists }} - {{ item.title }}">
+                    <img id="covers" class="img-fx img-fluid release-color-covers scale-on-hover" src="/images/releases/{{ item.year }}/{{ item.cover }}.jpg" alt="{{ item.artists }} - {{ item.title }}">
                   </div>
                   <h5 class="mb-0" style="font-size: 1.25rem;"><small><p class="mb-0 mt-2">{{ item.title }}</p></small></h5>
                 </a>
@@ -304,7 +304,7 @@
               His very first steps with music comes  in 2014 releasing a big room house music during many years. It was until 2017 when he transitioned his style to melbourne bounce. In 2019 he finds himself in deep house style which fits him perfectly. He started making remixes of famous pop songs, then in September 2019 he self-released his first album named Genuine. In 2020 Bayza mainly focused on producing deep house with slap house influence and you should looking forward for his coming tunes.
             </p>
             <p>
-              In 2021 Bayza is hitting his very first 1M plays on Spotify with his <b><a href="https://bayzamusic.com/releases/2020/everythingiwanted" target="_blank" title="Everything I Wanted | Bayza">Everything I Wanted</a></b>'s cover. 
+              In 2021 Bayza is hitting his very first 1M plays on Spotify with his <b><a href="/releases/2020/everythingiwanted" target="_blank" title="Everything I Wanted | Bayza">Everything I Wanted</a></b>'s cover. 
             </p>
             <p>
               He has currently signed tracks with Records Labels such as
