--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -294,7 +294,7 @@
     <section id="about" class="bg-dark text-secondary text-center py-5">
       <div class="container" style="overflow-x: hidden;">
         <h3 class="mt-3 text-uppercase text-white">About</h3>
-        <div class="row">
+        <div id="about-desc" class="row">
           <div class="col-lg-8 my-3 font-weight-light text-justify">
             <p>
               Ahmed Rangel, also known as 
