--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -328,6 +328,7 @@
 {% include scripts.html %}
     <script src="https://cdnjs.cloudflare.com/ajax/libs/color-thief/2.3.0/color-thief.umd.js"></script>
     <script>
+      // Age calculator function
       $(document).ready(function() {
         const now = new Date();
         const birth = new Date("June 15, 1998 00:00:00");
@@ -338,12 +339,15 @@
         document.getElementById('age').innerHTML = age;
       }); 
 
+      // underline another element on hover
       function onhoverover(textDecoration) {
         document.getElementsByClassName('latest-release-title')[0].style.textDecoration = "underline";
       }
       function onhoverout(textDecoration) {
         document.getElementsByClassName('latest-release-title')[0].style.textDecoration = "none";
       }
+
+      // open url
       function lnk(url) {
         window.open(url, '_self');
       }
