--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -96,16 +96,16 @@
 
     <section id="dark" class="cabecera text-white py-5">
       <div class="container pt-4 cabecera-adjust" style="overflow-x: hidden;">
-        <div class="row">
+        <div class="row align-items-center">
           <div class="col-12 col-md-6 text-left d-none d-md-block" data-aos="fade-right" data-aos-anchor="#example-anchor" data-aos-offset="500" data-aos-duration="1500">
-            <h1 class="display-4 mt-3 text-uppercase">Bayza</h1>
+            <h1 class="display-4 text-uppercase">Bayza</h1>
             <h4 class="my-3 font-weight-light">Panamanian music producer</h4>
-            <h5 class="mb-4 font-weight-light"><span>Contact: </span><a class="text-white" href="mailto:info@bayzamusic.com" target="_blank">info@bayzamusic.com</a></h5>
+            <h5 class="mb-0 font-weight-light"><span>Contact: </span><a class="text-white" href="mailto:info@bayzamusic.com" target="_blank">info@bayzamusic.com</a></h5>
           </div>
-          <div class="col-12 col-md-12 text-center d-block d-md-none" data-aos="zoom-in" data-aos-anchor="#example-anchor" data-aos-offset="500" data-aos-duration="1500">
-            <h1 class="display-4 mt-3 text-uppercase">Bayza</h1>
-            <h4 class="my-3 font-weight-light">Panamanian music producer</h4>
-            <small><p class="mb-4"><span>Contact: </span><a class="text-white" href="mailto:info@bayzamusic.com" target="_blank">info@bayzamusic.com</a></p></small>
+          <div class="col-12 col-md-12 text-center d-block d-md-none mt-4 mb-4" data-aos="zoom-in" data-aos-anchor="#example-anchor" data-aos-offset="500" data-aos-duration="1500">
+            <h1 class="display-4 text-uppercase mb-0">Bayza</h1>
+            <h4 class="mt-2 mb-3 font-weight-light">Panamanian music producer</h4>
+            <small><p class="mb-0"><span>Contact: </span><a class="text-white" href="mailto:info@bayzamusic.com" target="_blank">info@bayzamusic.com</a></p></small>
           </div>
           <div class="col-12 col-md-6 row text-right px-0 align-items-center" data-aos="fade-left" data-aos-anchor="#example-anchor" data-aos-offset="500" data-aos-duration="1500">
             <div class="col-12 col-md-7 d-none d-md-block pr-0 text-secondary">
