--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -8,7 +8,6 @@
     <script src="https://kit.fontawesome.com/cc91b92ca8.js?1"></script>
     <script src="https://code.iconify.design/2/2.1.2/iconify.min.js"></script>
     <script>
-        $(document).ready(function() {
             AOS.init();
 
             $('body').css('padding-top', 0 + 'px')
@@ -29,15 +28,14 @@
             window.onscroll = function() {scrollFunction()};
             function scrollFunction() {
                 if ((document.body.scrollTop > 80 || document.documentElement.scrollTop > 80) || (window.innerWidth < 767)) {
-                    document.getElementById("navbar").style.background = "#121212";
-                    document.getElementById("navbar").style.fontSize = "1rem";
-                    document.getElementById("navbar").getElementsByTagName("img")[0].style.width = 100;
+                    document.querySelector("#navbar").style.background = "#121212";
+                    document.querySelector("#navbar").style.fontSize = "1rem";
+                    document.querySelector("#navbar img").style.width = 100;
                 }else {
-                    document.getElementById("navbar").style.background = "transparent";
-                    document.getElementById("navbar").style.fontSize = "1.3rem";
-                    document.getElementById("navbar").getElementsByTagName("img")[0].style.width = 130;
+                    document.querySelector("#navbar").style.background = "transparent";
+                    document.querySelector("#navbar").style.fontSize = "1.3rem";
+                    document.querySelector("#navbar img").style.width = 130;
                 }
             }
-        });
     </script>
     
