--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,4 +1,4 @@
-    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script src="/js/aos.js"></script>
     <script src="https://connect.soundcloud.com/sdk/sdk-3.3.0.js"></script>
     <script src="https://apis.google.com/js/platform.js"></script>
     <script src="/js/bayza.js"></script>
