--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -139,13 +139,13 @@
             <div class="item">
               <div class="cover">
                 <div class="upcoming-container">
-                  <img class="img-fluid scale-on-hover upcoming" src="/images/releases/2022/lunchbox-friends.jpg">
+                  <img class="img-fluid scale-on-hover upcoming" src="/images/releases/2023/madhouse.jpg">
                   <div class="centered">
                     <h4>Upcoming</h4>
-                    <small><h5>Dec 9, 2022</h5></small>
+                    <small><h5>TBD</h5></small>
                   </div>
                 </div>
-                  <h5 class="mb-0"><small><p class="mb-0 mt-2">Lunchbox Friends</p></small></h5>
+                  <h5 class="mb-0"><small><p class="mb-0 mt-2">Madhouse</p></small></h5>
                   <small><p class="mb-4">Bayza, Staarz</p></small>
               </div>
             </div>
