--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -275,7 +275,7 @@
           </div>
           <div class="col-lg-6 mt-4">
             <div class="video-container">
-              <iframe width="1280" height="720" src="https://www.youtube-nocookie.com/embed/gqnAPRtTnSs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              <iframe width="1280" height="720" src="https://www.youtube-nocookie.com/embed/HRrD3Mj3sEY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
           </div>
           <div class="col-lg-6 mt-4">
