--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -139,14 +139,14 @@
             <div class="item">
               <div class="cover">
                 <div class="upcoming-container">
-                  <img class="img-fluid scale-on-hover upcoming" src="/images/releases/2023/madhouse.jpg">
+                  <img class="img-fluid scale-on-hover upcoming" src="/images/releases/2023/light-comes-up.jpg">
                   <div class="centered">
                     <h4>Upcoming</h4>
                     <small><h5>TBD</h5></small>
                   </div>
                 </div>
-                  <h5 class="mb-0"><small><p class="mb-0 mt-2">Madhouse</p></small></h5>
-                  <small><p class="mb-4">Bayza, Staarz</p></small>
+                  <h5 class="mb-0"><small><p class="mb-0 mt-2">Light Comes Up</p></small></h5>
+                  <small><p class="mb-4">Bayza</p></small>
               </div>
             </div>
           </div>
