--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -135,7 +135,7 @@
         <h3 class="mt-3 text-uppercase text-white">Recent Music</h3>
         <h5 class="font-weight-light">Check out my latest releases</h5>
         <div class="row my-4 text-left">
-          /*<div class="col-6 col-lg-3">
+          <!-- <div class="col-6 col-lg-3">
             <div class="item">
               <div class="cover">
                 <div class="upcoming-container">
@@ -149,7 +149,7 @@
                   <small><p class="mb-4">Bayza</p></small>
               </div>
             </div>
-          </div>*/
+          </div>-->
           {% for item in sorted %} 
           <div class="col-6 col-lg-3">
             <div class="item">
