--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -24,7 +24,7 @@
           </div>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="https://lnk.bayza.ml" target="_blank">Fanlinks</a>
+          <a class="nav-link" href="https://lnk.bayzamusic.com" target="_blank">Fanlinks</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/#about">About</a>
