--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -135,21 +135,21 @@
         <h3 class="mt-3 text-uppercase text-white">Recent Music</h3>
         <h5 class="font-weight-light">Check out my latest releases</h5>
         <div class="row my-4 text-left">
-          <!-- <div class="col-6 col-lg-3">
+          <div class="col-6 col-lg-3">
             <div class="item">
               <div class="cover">
                 <div class="upcoming-container">
-                  <img class="img-fluid scale-on-hover upcoming" src="/images/releases/2023/light-comes-up.jpg">
+                  <img class="img-fluid scale-on-hover upcoming" src="/images/releases/2023/now-or-never.jpg">
                   <div class="centered">
                     <h4>Upcoming</h4>
-                    <small><h5>TBD</h5></small>
+                    <small><h5>Aug 11, 2023</h5></small>
                   </div>
                 </div>
-                  <h5 class="mb-0"><small><p class="mb-0 mt-2">Light Comes Up</p></small></h5>
+                  <h5 class="mb-0"><small><p class="mb-0 mt-2">Now Or Never</p></small></h5>
                   <small><p class="mb-4">Bayza</p></small>
               </div>
             </div>
-          </div>-->
+          </div>
           {% for item in sorted %} 
           <div class="col-6 col-lg-3">
             <div class="item">
@@ -164,7 +164,7 @@
                 <small><p class="mb-4">{{ item.date | date: "%b %-d, %Y" }}</p></small>
               </div>
             </div>
-          </div>{% if forloop.index0 == 11 %}{% break %}{% endif %}{% endfor %}
+          </div>{% if forloop.index0 == 10 %}{% break %}{% endif %}{% endfor %}
         </div>  
         <a class="btn btn-outline-releases px-4 py-1" href="/releases/all" data-aos="flip-left">See all releases</a>
       </div>
