--- a/assets/css/bayza.css
+++ b/assets/css/bayza.css
@@ -28,7 +28,7 @@ h1 {
 }
 
 .cabecera {
-    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url(../images/bayza-background-4.jpg);
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url(/images/bayza-background-4.jpg);
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
