--- a/assets/css/bayza.css
+++ b/assets/css/bayza.css
@@ -426,7 +426,7 @@ b a:hover {
 }
 @media only screen and (max-width: 767px){
     .cabecera{
-        background: linear-gradient(rgb(0, 0, 0, 0.5), rgb(0, 0, 0, 0.5)),url(../images/bayza-background-4.jpg);
+        background: linear-gradient(rgb(0, 0, 0, 0.5), rgb(0, 0, 0, 0.5)),url(/images/bayza-background-4.jpg);
         background-repeat: no-repeat;
         background-position: center center;
         background-size: cover;
