--- a/assets/css/bayza.css
+++ b/assets/css/bayza.css
@@ -310,7 +310,7 @@ footer .instagram a:hover {
     background: #151515!important
 }
 
-a img, .img-fx, .img-select-none{
+a img, NuxtLink img, .img-fx, .img-select-none{
     -webkit-user-select: none;  /* Chrome all / Safari all */
     -moz-user-select: none;     /* Firefox all */
     -ms-user-select: none;      /* IE 10+ */
@@ -331,11 +331,11 @@ a img, .img-fx, .img-select-none{
 }
 
 
-b a {
+b a, b NuxtLink {
     color: #fff;
 }
 
-b a:hover {
+b a:hover, b NuxtLink:hover {
     color: #fff;
 }
 
