--- a/assets/css/bayza.css
+++ b/assets/css/bayza.css
@@ -95,90 +95,6 @@ h1 {
     font-size: 2em;
 }
 
-.icon_card {
-    width: 70px;
-    height: 70px;
-    line-height: 70px!important;
-    border: 5px solid!important;
-}
-
-.spotify_card {
-    background: #1db954;
-}
-
-.youtube_card {
-    background: #ff0000;
-}
-
-.soundcloud_card {
-    background: rgb(255,119,0);
-    background: -moz-linear-gradient(180deg, rgba(255,119,0,1) 0%, rgba(255,52,0,1) 100%);
-    background: -webkit-linear-gradient(180deg, rgba(255,119,0,1) 0%, rgba(255,52,0,1) 100%);
-    background: linear-gradient(180deg, rgba(255,119,0,1) 0%, rgba(255,52,0,1) 100%);
-}
-
-.itunes_card {
-    background: #EA4CC0;
-    background: -moz-linear-gradient(180deg, rgba(234,76,192,1) 0%, rgba(196,72,248,1) 100%);
-    background: -webkit-linear-gradient(180deg, rgba(234,76,192,1) 0%, rgba(196,72,248,1) 100%);
-    background: linear-gradient(180deg, rgba(234,76,192,1) 0%, rgba(196,72,248,1) 100%);
-}
-
-.apple_card {
-    background: rgb(251,91,115);
-    background: -moz-linear-gradient(180deg, rgba(251,91,115,1) 0%, rgba(250,36,60,1) 100%);
-    background: -webkit-linear-gradient(180deg, rgba(251,91,115,1) 0%, rgba(250,36,60,1) 100%);
-    background: linear-gradient(180deg, rgba(251,91,115,1) 0%, rgba(250,36,60,1) 100%);
-}
-
-.deezer_card {
-    background: rgb(255,128,0);
-    background: -moz-linear-gradient(90deg, rgba(255,128,0,1) 0%, rgba(253,90,34,1) 25%, rgba(204,25,83,1) 50%, rgba(53,89,166,1) 100%);
-    background: -webkit-linear-gradient(90deg, rgba(255,128,0,1) 0%, rgba(253,90,34,1) 25%, rgba(204,25,83,1) 50%, rgba(53,89,166,1) 100%);
-    background: linear-gradient(90deg, rgba(255,128,0,1) 0%, rgba(253,90,34,1) 25%, rgba(204,25,83,1) 50%, rgba(53,89,166,1) 100%);
-}
-
-.amazon_card {
-    background: #1e222f
-}
-
-.amazon-music_card {
-    background: rgb(67,0,253);
-    background: -moz-linear-gradient(180deg, rgba(67,0,253,1) 0%, rgba(43,32,110,1) 100%);
-    background: -webkit-linear-gradient(180deg, rgba(67,0,253,1) 0%, rgba(43,32,110,1) 100%);
-    background: linear-gradient(180deg, rgba(67,0,253,1) 0%, rgba(43,32,110,1) 100%);
-}
-
-.yandex_card {
-    background: #ffcb00;
-    color: #f33!important;
-}
-
-.vk_card {
-    background: #0077ff;
-}
-
-.beatport_card {
-    background: #020202;
-    color: #00ff95!important;
-}
-
-.tiktok_card, .tidal_card {
-    background: #010101;
-}
-
-.bandcamp_card {
-    background: #1da0c3;
-}
-
-.napster_card {
-    background: #111111;
-}
-
-.anghami_card {
-    background: #010101;
-}
-
 .font-weight-sc {
     color: #b8b8b8;
 }
@@ -292,19 +208,6 @@ footer .instagram a:hover {
     color: #fff
 }
 
-
-.video-container {
-    position: relative;
-    padding-bottom: 56.25%; /* 16:9 */
-    height: 0;
-}
-.video-container iframe {
-    position: absolute;
-    top: 0%;
-    left: 0%;
-    width: 100%;
-    height: 100%;
-}
 
 .bg-darkest-est {
     background: #151515!important
@@ -516,27 +419,14 @@ b a:hover, b NuxtLink:hover {
 }
 
 
-.icons-fx:hover {
+.icons-hover:hover {
     filter: saturate(0.85) contrast(0.95) drop-shadow(3px 3px 2px rgba(0, 0, 0, 0.80));
 }
 
 .platform-icons {
-    display: inline-block;
     margin: 0px!important;
-    max-width: 50px;
-    max-height: 50px;
-}
-.icons-fx .fa-fw {
-    text-align: center;
-    padding: 10px;
-    display: flex;
-    align-items: center;
-    align-content: center;
-    font-size:45px;
-}
-
-.icons-fx.rounded-circle {
-    border-radius: 30%!important;
+    width: 45px;
+    height: 45px;
 }
 
 @media only screen and (max-width: 991px){
@@ -558,10 +448,6 @@ b a:hover, b NuxtLink:hover {
 
 .cover div.overflow-hidden, img#covers, #releases div#track-info img {
     border-radius: 3px
-}
-
-.video-container iframe {
-    border-radius: 3px;
 }
 
 .cabecera img#covers:hover {
